--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas 
-openpyxl 
-matplotlib
-sqlalchemy==2.0.23 
-psycopg2-binary==2.9.9
-scikit-learn
-ruptures
+streamlit>=1.28.0
+pandas>=2.1.0
+psycopg2-binary>=2.9.9
+openpyxl>=3.1.2
+matplotlib>=3.8.0
+sqlalchemy>=2.0.23
+scikit-learn>=1.3.2
+ruptures>=1.1.7
